--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <div class="container">
-    <h1>Bienvenue sur Cibiyar Karatun</h1>
-    <p>Cliquez sur le bouton ci-dessous pour accéder à l’application web Cibiyar Karatun :</p>
-    <button id="launch-btn">Accéder à Cibiyar Karatun</button>
+  <div class="overlay">
+    <div class="container">
+      <h1>Bienvenue sur Cibiyar Karatun</h1>
+      <p>Cliquez sur le bouton ci-dessous pour accéder à l’application web Cibiyar Karatun :</p>
+      <button id="launch-btn">Accéder à Cibiyar Karatun</button>
+    </div>
   </div>
 
   <script src="script.js"></script>
